# platform.prebuilts.jdk.jdk11

./: update.sh
darwin-aarch64/: release
darwin-aarch64/jmods/: java.instrument.jmod  java.logging.jmod  java.management.jmod  java.naming.jmod  java.net.http.jmod  java.rmi.jmod  java.se.jmod  java.security.sasl.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  jdk.accessibility.jmod  jdk.aot.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.dynalink.jmod  jdk.hotspot.agent.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.jartool.jmod  jdk.javadoc.jmod  jdk.jdwp.agent.jmod  jdk.jfr.jmod  jdk.jlink.jmod  jdk.jsobject.jmod  (+11 more)
darwin-x86/: release
linux-x86/: BUILD.bazel
linux-x86/jmods/: java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.scripting.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.aot.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.jartool.jmod  jdk.javadoc.jmod  jdk.jconsole.jmod  jdk.jdi.jmod  jdk.jfr.jmod  jdk.jlink.jmod  jdk.jshell.jmod  jdk.jsobject.jmod  jdk.jstatd.jmod  jdk.management.agent.jmod  jdk.management.jfr.jmod  jdk.management.jmod  (+14 more)
staging/: manifest.xml
(+446 files in other folders)
